--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,6 +160,15 @@ ignore = [
     "E721", # Allow using == to compare with type
     "UP031", # Allow percent format
     "RUF022", # Allow unsorted __all__ value
+    "RUF001",
+    "RUF002",
+    "RUF003",
+    "N806",
+    "N812",
+    "B007",
+    "C408",
+    "C414",
+    "RUF046",
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
