--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "numpy>=1.26.0",
     "xxhash>=3.5.0",
     "gepa[dspy]==0.0.17",
+    "langextract>=1.0.9",
+    "uvicorn>=0.29.0",
 ]
 
 [project.optional-dependencies]
