--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "diskcache>=5.6.0",
     "json-repair>=0.30.0",
     "tenacity>=8.2.3",
-    "anyio",
+    "anyio>=4.9.0",
     "asyncer==0.0.8",
     "cachetools>=5.5.0",
     "cloudpickle>=3.0.0",
